--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,6 +269,8 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".ui.activity.Subsone" />
+        <activity android:name=".ui.activity.Subscriptionone"></activity>
     </application>
 
 </manifest>
